# demo_semantic_bouncer

./: .gitignore  .justfile  README.md  pyproject.toml
examples/: abc_co.json
src/demo_semantic_bouncer/: base.py  chroma_collection.py  cli.py  constants.py
